--- a/redmi_ax6000.config
+++ b/redmi_ax6000.config
@@ -168,3 +168,4 @@ CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_wireless-tools=y
 CONFIG_PACKAGE_yq=y
 CONFIG_PACKAGE_zlib=y
+CONFIG_PACKAGE_zoneinfo-asia=y
