--- a/xiaomi_ac2100.config
+++ b/xiaomi_ac2100.config
@@ -132,3 +132,4 @@ CONFIG_PACKAGE_uwsgi-syslog-plugin=y
 CONFIG_PACKAGE_vim-full=y
 CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_zlib=y
+CONFIG_PACKAGE_zoneinfo-asia=y
