--- a/package/network/services/odhcpd/Makefile
+++ b/package/network/services/odhcpd/Makefile
@@ -8,7 +8,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=odhcpd
-PKG_RELEASE:=3
+PKG_RELEASE:=4
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL=$(PROJECT_GIT)/project/odhcpd.git
@@ -19,7 +19,6 @@ PKG_SOURCE_VERSION:=d44af6dd8f4e1dd0d858ae19419057ab4f319310
 PKG_MAINTAINER:=Hans Dedecker <dedeckeh@gmail.com>
 PKG_LICENSE:=GPL-2.0
 
-PKG_CONFIG_DEPENDS:=CONFIG_PACKAGE_odhcpd_$(BUILD_VARIANT)_ext_cer_id
 PKG_ASLR_PIE_REGULAR:=1
 
 include $(INCLUDE_DIR)/package.mk
@@ -38,27 +37,14 @@ define Package/odhcpd/default/description
  requirements for IPv6 home routers.
 endef
 
-define Package/odhcpd/default/config
-menu "Configuration"
-	depends on PACKAGE_$(1)
-
-config PACKAGE_odhcpd_$(2)_ext_cer_id
-	int
-	default 0
-	prompt "CER-ID Extension ID (0 = disabled)"
-endmenu
-endef
-
 define Package/odhcpd
-  $(call Package/odhcpd/default)
+  $(Package/odhcpd/default)
   TITLE += and DHCPv4 server
   VARIANT:=full
 endef
 
-Package/odhcpd/config=$(call Package/odhcpd/default/config,odhcpd,full)
-
 define Package/odhcpd/description
- $(call Package/odhcpd/default/description)
+ $(Package/odhcpd/default/description)
 
  This is a variant providing server services for DHCPv4, RA, stateless and
  stateful DHCPv6,  prefix delegation and can be used to relay RA, DHCPv6 and
@@ -67,15 +53,13 @@ define Package/odhcpd/description
 endef
 
 define Package/odhcpd-ipv6only
-  $(call Package/odhcpd/default)
+  $(Package/odhcpd/default)
   VARIANT:=ipv6only
   DEPENDS+= @IPV6
 endef
 
-Package/odhcpd-ipv6only/config=$(call Package/odhcpd/default/config,odhcpd-ipv6only,ipv6only)
-
 define Package/odhcpd-ipv6only/description
- $(call Package/odhcpd/default/description)
+ $(Package/odhcpd/default/description)
 
  This is a variant providing server services for RA, stateless and stateful
  DHCPv6,  prefix delegation and can be used to relay RA, DHCPv6 and NDP between
@@ -86,10 +70,6 @@ CMAKE_OPTIONS += -DUBUS=1
 
 ifeq ($(BUILD_VARIANT),full)
   CMAKE_OPTIONS += -DDHCPV4_SUPPORT=1
-endif
-
-ifneq ($(CONFIG_PACKAGE_odhcpd_$(BUILD_VARIANT)_ext_cer_id),0)
-  CMAKE_OPTIONS += -DEXT_CER_ID=$(CONFIG_PACKAGE_odhcpd_$(BUILD_VARIANT)_ext_cer_id)
 endif
 
 define Package/odhcpd/install
