--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,7 +57,7 @@ jobs:
 
       - name: ${{ matrix.device }} Clone Openwrt source code
         run: |
-          git clone -b v${GITHUB_REF_NAME#v} https://github.com/codetiger666/openwrt.git openwrt
+          git clone -b ${GITHUB_REF_NAME} https://github.com/codetiger666/openwrt.git openwrt
 
       - name: ${{ matrix.device }} Update & Install Feeds
         run: |
