--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -166,6 +166,7 @@ jobs:
       - name: Upload Firmware to Releases
         uses: softprops/action-gh-release@master
         with:
+          tag_name: snapshot
           files: release/*
           body_path: release_body
           
