bpf-headers: correctly support refreshing the package
Overwrite default Quilt/Refresh/Package and use the Kernel variant to
correctly refresh bpf-headers patches.

Signed-off-by: Christian Marangi <ansuelsmth@gmail.com>

--- a/package/kernel/bpf-headers/Makefile
+++ b/package/kernel/bpf-headers/Makefile
@@ -67,6 +67,10 @@ define Build/Patch
 	$(Kernel/Patch/Default)
 endef
 
+define Quilt/Refresh/Package
+	$(Quilt/Refresh/Kernel)
+endef
+
 BPF_DOC = $(PKG_BUILD_DIR)/scripts/bpf_doc.py
 
 define Build/Configure/64
